# autodev

./: .gitignore  AGENT.md  LICENSE  README.md  dev.md  pyproject.toml
.github/workflows/: publish.yml
docs/: how-to-use-autodev.md  skills-main-integration.md
docs/specs/: dev-coca-spec.md
src/autodev/: __init__.py  circuit_breaker.py  cli.py  cli_common.py  cli_handlers.py  cli_ops.py  cli_project.py  cli_session.py  cli_skills.py  cli_task.py  cli_tool.py  config.py  env.py  execution_context.py  gate.py  git_ops.py  heartbeat.py  init_project.py  init_templates.py  log.py  plan.py  progress.py  prompt.py  reflection.py  runner.py  runtime_status.py  skill_catalog.py  snapshot.py  spec.py  task_audit.py  task_brief.py  task_formatting.py  task_state.py  task_store.py  tmux_session.py  web.py  web_dashboard.html
src/autodev/backends/: __init__.py  claude.py  codex.py  common.py  gemini.py  opencode.py
src/autodev/skills/autodev-runtime/: SKILL.md
src/autodev/skills/autodev-runtime/references/: mcp-essentials.md  skills-main-integration.md  task-lifecycle.md
src/autodev/skills/coca-spec/: SKILL.md
src/autodev/skills/spec-driven-develop/: SKILL.md
src/autodev/skills/spec-driven-develop/references/: doc-templates.md
tests/: test_backends_and_plan.py  test_cli_and_config.py  test_execution_context.py  test_git_ops.py  test_progress.py  test_reflection.py  test_runner.py  test_runtime_status.py  test_skill_catalog.py  test_task_audit.py  test_task_formatting.py  test_task_state.py  test_task_store.py  test_tmux_session.py  test_verification_and_snapshot.py
