[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodev-cli"
version = "0.1.0"
description = "CLI for unattended AI-driven development with multi-backend support (Codex, Claude, Gemini, OpenCode)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "darknetopencv-alt" },
]
keywords = ["ai", "automation", "codex", "claude", "development", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/darknetopencv-alt/autodev"
Repository = "https://github.com/darknetopencv-alt/autodev"
Issues = "https://github.com/darknetopencv-alt/autodev/issues"

[project.scripts]
autodev = "autodev.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autodev"]

[tool.hatch.build.targets.wheel.force-include]
"src/autodev/skills" = "autodev/skills"
